--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -491,6 +491,7 @@ fr-FR:
       title: Commerce
       no_lines_found: 'Aucun pruduit n''a été ajouté à la commande '
       messages:
+        invoice_already_created: 'La facture de cette livraison a déjà été créée'
         need_product_to_create_price: 'Pour pouvoir ajouter un prix, il vous faut d''abord enregistrer un produit à tarifer.'
         need_stock_location_to_record_stock_moves: 'Pour pouvoir gérer vos stocks vous devez enregistrer vos lieux de stockage.'
     production:
@@ -860,12 +861,13 @@ fr-FR:
         amount: Total de la livraison HT
         amount_with_taxes: Total de la livraison TTC
         infos: 'Renseignez les caractéristiques de la livraison'
-        
-
+      deliveries_create:
+        title: Ajouter une livraison
       index:
         delays: Délais
         invoicing_parameters: Facturation
         parameters: Paramètres
+        payment_modes: Types de paiement
         prices: Prix
         products: Produits
         purchases: Achats
@@ -981,6 +983,7 @@ fr-FR:
         deliveries: Livraisons 
         deliveries_create: Ajouter une livraison
         invoice: Facturation 
+        invoice_number: 'Facture n°'
         title: "Livraisons"
         sales_print: Imprimer la commande
         ship: 'Expédié le  '
@@ -988,8 +991,9 @@ fr-FR:
         quantity: Quantité
         undelivered: 'Reste à livrer'
         deliver: 'Reçu le  '
-      deliveries_create:
-       title: Ajouter une livraison
+      sales_payments: 
+        title: Règlements
+        payments: Règlements
       sales_invoices:
         title: Facturation
         invoices: Factures
