--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -322,6 +322,11 @@ fr-FR:
         id: Journal
         name: Nom
         nature: Nature
+      payment: 
+        account_id: Compte associé 
+        amount: Montant
+        mode_id: Mode de paiement
+        paid_on: Réglé le 
       payment_mode:
         account_id: Compte associé
         name: Nom
@@ -897,6 +902,12 @@ fr-FR:
         taxes: 'Taxes'
         title: 'Gestion commerciale'
         units: 'Unités de mesure'
+      payments_create: 
+        title: 'Ajouter un nouveau réglement à la vente : {{value}}'
+      _payments_form:
+        title: 'Renseignez les conditions du réglement '
+        new: 'Créer un nouveau réglement'
+        existing_part: 'Utiliser un réglement non affecté'
       payment_modes:
         title: Types de paiement
         payment_modes_create: 'Créer un nouveau type de paiement'
@@ -1008,7 +1019,9 @@ fr-FR:
         deliver: 'Reçu le  '
       sales_payments: 
         title: Règlements
+        close_sale: Clôturer la vente
         payments: Règlements
+        payments_create: Ajouter un nouveau paiement
       sales_invoices:
         title: Facturation
         invoices: Factures
