--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -331,6 +331,11 @@ fr-FR:
       payment_mode:
         account_id: Compte associé
         name: Nom
+      payment_part: 
+        sum_amount: Montant
+        amount: Montant attribué à la vente
+        payment_way: Mode de paiement
+        paid_on: Réglé le
       price:
         amount: Montant HT
         amount_with_taxes: Montant TTC
@@ -906,6 +911,8 @@ fr-FR:
         units: 'Unités de mesure'
       payments_create: 
         title: 'Ajouter un nouveau réglement à la vente : {{value}}'
+      payments_update:
+        title: 'Modifier un paiement'
       _payments_form:
         title: 'Renseignez les conditions du réglement '
         new: 'Créer un nouveau réglement'
@@ -1025,12 +1032,15 @@ fr-FR:
         close_sale: Clôturer la vente
         financial_state: Statut du paiement de la vente
         invoices: Factures
+        invoices_total: Total factures
         number: Numéro
-        paid_on: Payé le 
+        paid_on: Réglé le 
         payment_mode: Mode de paiement
         payment_on: À payer le
         payments: Règlements
         payments_create: Ajouter un nouveau paiement
+        payments_total: Total réglements
+        rest_to_pay: Reste à payer
       sales_invoices:
         title: Facturation
         invoices: Factures
