--- a/config/locales/fr-FR.accountancy.yml
+++ b/config/locales/fr-FR.accountancy.yml
@@ -4,6 +4,14 @@ fr-FR:
       title: Comptabilité
       accounts:
         create: 'Créer un nouveau compte comptable'
+      bank_account_statements:
+        create: 'Créer un nouveau relevé de compte bancaire'
+      bank_accounts: 
+        create: 'Créer un nouveau compte bancaire'
+      financialyears:
+        create: 'Créer un nouvel exercice comptable '
+      journals:
+        create: 'Créer un nouveau journal comptable'
       messages:
         need_financialyear_to_record_entries: 'Vous devez avoir un exercice ouvert pour pouvoir saisir des écritures.'
         need_journal_to_record_entries: 'Vous devez créer un journal pour pouvoir saisir des écritures à l''intérieur.'
