git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@570 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -179,8 +179,10 @@ fr-FR:
         name: Intitulé
         bank_code: Code banque
         agency_code: Code guichet 
+        country_code: Code pays
         number: Numéro de compte bancaire
         key: Clé RIB
+        mod: Mode
         iban: IBAN
         iban_label: IBAN
         iban_label2: IBAN
