--- a/config/locales/fr-FR.accountancy.yml
+++ b/config/locales/fr-FR.accountancy.yml
@@ -130,9 +130,20 @@ fr-FR:
         update_params: 'Changer de journal et/ou d''exercice...'
       list_entries:
         title: Consultation des écritures
+        subtitle: 'Ecritures de l''exercice {{financialyear}} pour le journal {{journal}}'
         journal_x: '{{name}} (clôturé le {{closed_on}})'  	
         select_journal: 'Consulter les écritures du journal'
         select_financialyear: 'Pour l''exercice comptable'
+        record_number: 'N°Pièce'
+        record_created: 'Crée le'
+        record_printed: 'Datée du'
+        label: 'Libellé'
+        account_number: 'N°Compte'
+        record_debit: 'Débit'
+        record_credit: 'Crédit'
+        no_entries: 'Aucune écriture n''est enregistrée'
+        count_entries: 'Il y a {{count}} écritures enregistrées' 
+
       financialyears:
         title: Exercices comptables
         create: Créer un nouvel exercice comptable
