--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -383,6 +383,11 @@ fr-FR:
         unit_id: Unité de mesure
         weight: Poids (kg)
         without_stocks: Ne nécessite pas de gestion de stocks
+      products_stock: 
+        critic_quantity_min: Quantité minimum critique
+        location_id: Pour le lieu de stockage
+        quantity_max: Quantité maximum
+        quantity_min: Quantité minimum
       profession:
         name: 'Nom'
         code: 'Code'
@@ -669,6 +674,19 @@ fr-FR:
         informations: 'Informations'
         management: 'Gestion commerciale (ventes, achats et stocks)'
         modules: 'Modules'
+        nb_entities: 
+          zero: 'Aucune fiche clients/fournisseurs'
+          one: '1 fiche client/fournisseur'
+          other: '{{count}} fiches clients/fournisseurs'
+        nb_sales: 
+          zero: 'Aucune livraison en attente'
+          one: '1 livraison en attente'
+          other: '{{count}} livraisons en attente '
+        nb_purchases:
+          zero: 'Aucune commande en attente'
+          one: '1 commande en attente'
+          other: '{{count}} commandes en attente'
+        performance_indicator: 'Tableau de bord'
         relations: 'Gestion des relations clients/fournisseurs'
       about_us:
         title: 'À propos d''Ekylibre'
